@@ -4,7 +4,7 @@
 
   Copyright (C) 2001, 2002, 2003   Theodore A. Roth, Klaus Rudolph
   Copyright (C) 2007 Paulo Marques
-  Copyright (C) 2008-2019 Free Software Foundation, Inc.
+  Copyright (C) 2008-2020 Free Software Foundation, Inc.
 
   avrtest is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
