@@ -2,7 +2,7 @@
   This file is part of avrtest -- A simple simulator for the
   Atmel AVR family of microcontrollers designed to test the compiler.
 
-  Copyright (C) 2019 Free Software Foundation, Inc.
+  Copyright (C) 2019-2020 Free Software Foundation, Inc.
 
   avrtest is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
