@@ -1,3 +1,7 @@
+2020-01-15  Georg-Johann Lay  <avr@gjlay.de>
+
+	Adjust copyright years.
+
 2019-12-18  Georg-Johann Lay  <avr@gjlay.de>
 
 	Make parallel builds work.
